[package]
name = "project"
version = "0.0.1"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.6", features = ["derive"] }
data-encoding = "2.8.0"
failure = "0.1.8"
futures = { version = "0.3.30" }
libp2p = { version = "0.55.0", features = ["tokio", "cbor", "dns", "kad", "noise", "macros", "request-response", "tcp", "gossipsub", "websocket", "yamux", "quic", "mdns"] }
log = "0.4"
num-bigint = "0.4.6"
pretty_env_logger = "0.5.0"
ring = "0.17.10"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
shell-words = "1.1.0"
sled = "0.34.7"
tokio = { version = "1.38", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


